// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DisableScrollOutside should render with body lock 1`] = `
<div>
  Children
  <Component />
</div>
`;

exports[`DisableScrollOutside should render with children 1`] = `
<div>
  <p>
    Children
  </p>
</div>
`;

exports[`DisableScrollOutside should render without props 1`] = `<div />`;
